# Sekhmet

./: CMakeLists.txt  README.md
core/: LookupTables.h  MoveGen.cpp  MoveGen.h  defs.h  main.cpp  spinLock.h  threadtest.cpp
interface/: UCI.cpp  UCI.h
models/: Board.cpp  Board.h  Move.cpp  Move.h
search/: MovePicker.cpp  MovePicker.h  OrderingData.cpp  OrderingData.h  ParallelSearch.cpp  ParallelSearch.h  ParallelSearcher.cpp  ParallelSearcher.h  Search.cpp  Search.h  SearchThread.cpp  SearchThread.h  eval.cpp  eval.h
tests/: gameVsEngine.cpp  perftest.cpp  test.cpp  tests.cpp  tests.h
transpositions/: TranspTableEntry.h  atomicEntry.h  threadSafeTable.cpp  threadSafeTable.h  zKey.cpp  zKey.h  zTable.cpp  zTable.h
